--- a/UI/UIsource/mainWindow.ui
+++ b/UI/UIsource/mainWindow.ui
@@ -14,7 +14,7 @@
    <string>LUMIS实时能谱</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout_3">
+   <layout class="QHBoxLayout" name="horizontalLayout_16">
     <item>
      <widget class="DockArea" name="dockArea" native="true"/>
     </item>
@@ -39,6 +39,7 @@
      </property>
      <addaction name="action_baseline_importFromData"/>
      <addaction name="action_baseline_changeBaseline"/>
+     <addaction name="action_baseline_measureBaseline"/>
     </widget>
     <addaction name="menu_2"/>
     <addaction name="action_configuration"/>
@@ -77,19 +78,35 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>314</width>
-          <height>333</height>
+          <width>364</width>
+          <height>348</height>
          </rect>
         </property>
         <attribute name="label">
          <string>连接操作</string>
         </attribute>
-        <layout class="QVBoxLayout" name="verticalLayout_4">
+        <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
-          <widget class="QPushButton" name="pushButton_reset">
-           <property name="text">
-            <string>复位</string>
+          <widget class="QGroupBox" name="groupBox_8">
+           <property name="title">
+            <string>初始化</string>
            </property>
+           <layout class="QHBoxLayout" name="horizontalLayout_17">
+            <item>
+             <widget class="QPushButton" name="pushButton_clockSynchronization">
+              <property name="text">
+               <string>时钟同步</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="pushButton_reset">
+              <property name="text">
+               <string>复位</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </widget>
          </item>
          <item>
@@ -527,25 +544,54 @@
           <x>0</x>
           <y>0</y>
           <width>300</width>
-          <height>333</height>
+          <height>324</height>
          </rect>
         </property>
         <attribute name="label">
          <string>检测工具</string>
         </attribute>
-        <widget class="QGroupBox" name="groupBox_6">
-         <property name="geometry">
-          <rect>
-           <x>0</x>
-           <y>0</y>
-           <width>301</width>
-           <height>80</height>
-          </rect>
-         </property>
-         <property name="title">
-          <string>GroupBox</string>
-         </property>
-        </widget>
+        <layout class="QVBoxLayout" name="verticalLayout_9">
+         <item>
+          <widget class="QGroupBox" name="groupBox_6">
+           <property name="title">
+            <string>触发事件</string>
+           </property>
+           <layout class="QVBoxLayout" name="verticalLayout_8">
+            <item>
+             <layout class="QHBoxLayout" name="horizontalLayout_15">
+              <item>
+               <widget class="QLabel" name="label_9">
+                <property name="text">
+                 <string>触发情况：</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="pushButton_triggerCondition_addPlot">
+                <property name="text">
+                 <string>添加图像</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+           </layout>
+          </widget>
+         </item>
+         <item>
+          <spacer name="verticalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>232</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
        </widget>
       </widget>
      </item>
@@ -580,6 +626,11 @@
   <action name="action_configuration">
    <property name="text">
     <string>仪器配置参数</string>
+   </property>
+  </action>
+  <action name="action_baseline_measureBaseline">
+   <property name="text">
+    <string>测量基线数据</string>
    </property>
   </action>
  </widget>
